public/CSS/profil.css
.information{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.information_text{
    border: 2px solid black;
    color: black;
    padding-top: 0.6%;
    padding-left: 0.6%;
    background-color: #E6D1DD;
    width: 600px;
    height: 40px;
    font-size: 20px;
    border-radius: 10px;
}
.form_text{
    width: 600px;
    height: 40px;
    font-size: 20px;
    border-radius: 10px;

}

.form_text>div>input{
    all: unset;
    color: black;
    border: 2px solid black ;
    background-color: white;
    width: 400px;
    border-radius: 10px;
    padding: 1%;
}

.form_text>div{
    display: flex;
    justify-content: space-between;
}

.form {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 700px;
    padding: 40px;
    margin: 20px auto;
    transform: translate(-50%, -55%);
    background: white;
    box-sizing: border-box;
    box-shadow: 0 15px 25px rgba(0,0,0,.6);
    border-radius: 10px;
}

.form_dark {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 700px;
    padding: 40px;
    margin: 20px auto;
    transform: translate(-50%, -55%);
    background: black;
    box-sizing: border-box;
    box-shadow: 0 15px 25px rgba(255, 255, 255, 0.6);
    border-radius: 10px;
}

.form_dark>form{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.form>form{
    display: flex;
    flex-direction: column;
    align-items: center;
}

